Force calculation completed

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,25 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%reset -f"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -33,6 +15,7 @@
     }
    ],
    "source": [
+    "%reset -f\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "import numpy as np\n",
@@ -41,31 +24,12 @@
     "import vertex\n",
     "import time\n",
     "import movement\n",
+    "import cell\n",
+    "import geometry\n",
+    "import data_holder\n",
     "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%reload_ext autoreload"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# import vertex\n",
-    "# import cell\n",
-    "# import data_holder\n",
-    "# import geometry\n",
-    "\n",
+    "%autoreload 2\n",
+    "%reload_ext autoreload\n",
     "%matplotlib inline"
    ]
   },
@@ -868,12 +832,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'j' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[27], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m j3 \u001b[38;5;241m=\u001b[39m \u001b[43mj\u001b[49m\u001b[38;5;241m.\u001b[39mview()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'j' is not defined"
+     ]
+    }
+   ],
    "source": [
     "j3 = j.view()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'v': 'hi'}"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = dict()\n",
+    "test[\"v\"] = \"hi\"\n",
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v1 = vertex.Vertex(1,3)\n",
+    "v2 = vertex.Vertex(1,3)\n",
+    "v1 == v2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(10.2)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z = np.array([1, 2]) * 2 + np.array([1, 1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z += np.array([1, 1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
